--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,21 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
+
+  jwt_decoder: ^2.0.1
+  shared_preferences: ^2.2.3
+  get: ^4.6.1
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.14.3"
+flutter_launcher_icons:
+  android: "launcher_icon"
+  image_path: "assets/logo.png"
+  min_sdk_android: 21 
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,8 +74,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
-    - assets/icons/ 
+    #- assets/images/
+    #- assets/icons/ 
+    - assets/
      
 
   # An image asset can refer to one or more resolution-specific "variants", see
