--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.14.3"
 flutter_launcher_icons:
   android: "launcher_icon"
-  image_path: "assets/logo.png"
+  image_path: "assets/logo1.png"
   min_sdk_android: 21 
 
 
