--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   form_field_validator: ^1.1.0
   font_awesome_flutter: ^10.8.0
-  google_fonts: ^6.2.1
+  google_fonts: ^5.0.0
+  #google_fonts: ^3.0.0
   image_picker: ^1.1.2
 
   jwt_decoder: ^2.0.1
