--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shared_preferences: ^2.2.3
   http: ^1.2.2
   get: ^4.6.1
+  animated_text_kit: ^4.2.3
+  page_transition: ^2.2.1
   
 
 dev_dependencies:
