--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   shared_preferences: ^2.2.3
   http: ^1.2.2
-  
+  flutter_svg: ^2.0.7
   get: ^4.6.1
   animated_text_kit: ^4.2.3
   page_transition: ^2.2.1
@@ -84,6 +84,7 @@ flutter:
     #- assets/images/
     #- assets/icons/ 
     - assets/
+    - assets/appareil/
      
 
   # An image asset can refer to one or more resolution-specific "variants", see
