--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   animated_text_kit: ^4.2.3
   page_transition: ^2.2.1
   uuid: ^4.5.1
+  flutter_tts: ^4.2.2
   
 
 dev_dependencies:
