--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dev_dependencies:
 
 flutter_launcher_icons:
   android: "launcher_icon"
-  image_path: "assets/logo1.png"
+  image_path: "assets/smathome.png"
   min_sdk_android: 21 
 
 
